--- a/css/styles.css
+++ b/css/styles.css
@@ -101,6 +101,23 @@ button {
   display: flex;
 }
 
+@media screen and (max-width:767px) {
+
+  .header-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 24px;
+    padding-bottom: 22px;
+  }
+}
+
+@media screen and (min-width:768px) {
+  .header-container {
+    height: 72px;
+  }
+}
+
 .head-nav {
   display: flex;
   align-items: center;
@@ -119,6 +136,13 @@ button {
   margin-right: 76px;
 }
 
+@media screen and (max-width:767px) {
+
+  .head-logo {
+    margin-right: 0;
+  }
+}
+
 @media screen and (min-width:768px) and (max-width:1157px) {
   .head-logo {
     margin-right: 122px;
@@ -129,58 +153,25 @@ button {
   color: var(--title-color);
 }
 
-@media screen and (max-width:767px) {
-
-  .head-logo {
-    margin-right: 0;
-  }
-
-  .head-menu {
-    display: none;
-  }
-
-  .head-items {
-    display: none;
-  }
-
-  .head-address {
-    display: none;
-  }
-
-  .header-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 24px;
-    padding-bottom: 22px;
-  }
-
-  .mobile-head-btn {
-    background-color: transparent;
-    border: none;
-    padding: 0;
-    height: 40px;
-  }
-}
-
-@media screen and (min-width:768px) {
-
-  .mobile-head-btn {
-    display: none;
-  }
-
-  .header-container {
-    height: 72px;
-  }
-}
-
 .head-menu {
   display: flex;
   gap: 40px;
 }
 
+@media screen and (max-width:767px) {
+  .head-menu {
+    display: none;
+  }
+}
+
 .head-items {
   color: #404bbf;
+}
+
+@media screen and (max-width:767px) {
+  .head-items {
+    display: none;
+  }
 }
 
 .head-items:nth-last-child() {
@@ -235,6 +226,12 @@ button {
 
 .head-address {
   margin-left: auto;
+}
+
+@media screen and (max-width:767px) {
+  .head-address {
+    display: none;
+  }
 }
 
 @media screen and (min-width:768px) and (max-width:1157px) {
@@ -293,6 +290,22 @@ button {
 .head-contacts:hover,
 .head-contacts:focus {
   color: #404bbf;
+}
+
+@media screen and (max-width:767px) {
+  .mobile-head-btn {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    height: 40px;
+  }
+}
+
+@media screen and (min-width:768px) {
+
+  .mobile-head-btn {
+    display: none;
+  }
 }
 
 /* ----- MOBILE MENU ----- */
@@ -442,7 +455,7 @@ button {
   height: 600px;
   margin: 0 auto;
   padding: 188px 0;
-  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-img.jpg);
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/bg-mobile.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -456,10 +469,42 @@ button {
   }
 }
 
+@media screen and (min-device-pixel-ratio: 2) and (max-width:767px),
+screen and (min-resolution: 192dpi) and (max-width:767px),
+screen and (min-resolution: 2dppx) and (max-width:767px) {
+  .hero {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/bg-mobile@2x.jpg);
+  }
+}
+
 @media screen and (min-width:768px) and (max-width:1157px) {
   .hero {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/bg-tablet.jpg);
     padding: 112px 0;
+    max-width: 768px;
     height: 436px;
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width:768px) and (max-width:1157px),
+screen and (min-resolution: 192dpi) and (min-width:768px) and (max-width:1157px),
+screen and (min-resolution: 2dppx) and (min-width:768px) and (max-width:1157px) {
+  .hero {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/bg-tablet@2x.jpg);
+  }
+}
+
+@media screen and (min-width:1158px) {
+  .hero {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/bg-desktop.jpg);
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width:1158px),
+screen and (min-resolution: 192dpi) and (min-width:1158px),
+screen and (min-resolution: 2dppx) and (min-width:1158px) {
+  .hero {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/bg-desktop@2x.jpg);
   }
 }
 
@@ -520,6 +565,12 @@ button {
   background: rgba(46, 47, 66, 0.4);
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width:768px) and (max-width:1157px) {
+  .backdrop {
+    width: 768px;
+  }
 }
 
 .backdrop.is-hidden {
@@ -1225,9 +1276,9 @@ button {
 @media screen and (min-width:768px) and (max-width:1157px) {
   .footer-container {
     flex-wrap: wrap;
-    width: 100%;
+    width: 768px;
     row-gap: 72px;
-    margin-left: 108px;
+    padding-left: 108px;
   }
 }
 
