--- a/css/styles.css
+++ b/css/styles.css
@@ -341,6 +341,7 @@ button {
     height: 100%;
     padding-top: 80px;
     padding-bottom: 40px;
+    padding-left: 40px;
   }
 
   .mobile-close-btn {
@@ -362,7 +363,6 @@ button {
     display: flex;
     flex-direction: column;
     gap: 40px;
-    padding-left: 25px;
   }
 
   .mobile-address-menu {
@@ -371,7 +371,6 @@ button {
     gap: 40px;
     margin-top: auto;
     margin-bottom: 48px;
-    padding-left: 25px;
   }
 
   .mobile-contacts {
@@ -394,14 +393,13 @@ button {
   .mobile-social-menu {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
-    gap: 56px;
-    padding-left: 25px;
+    justify-content: space-between;
   }
 
   .mobile-social-items {
     width: 40px;
     height: 40px;
+    display: inline-block;
   }
 
   .mobile-social-link {
