--- a/css/styles.css
+++ b/css/styles.css
@@ -394,6 +394,7 @@ button {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-right: 35px;
   }
 
   .mobile-social-items {
