--- a/css/styles.css
+++ b/css/styles.css
@@ -1239,32 +1239,15 @@ screen and (min-resolution: 2dppx) and (min-width:1158px) {
 
 .footer {
   background-color: var(--title-color);
-  padding: 100px 0 100px;
-}
-
-@media screen and (max-width:767px) {
-  .footer {
-    padding: 0;
-  }
-}
-
-@media screen and (min-width:768px) and (max-width:1157px) {
-  .footer {
-    padding: 96px 0;
-  }
 }
 
 .footer-container {
-  display: flex;
-  align-items: baseline;
-  width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
 }
 
 @media screen and (max-width:767px) {
   .footer-container {
-    display: block;
     width: 100%;
     padding: 96px 15px;
   }
@@ -1272,10 +1255,23 @@ screen and (min-resolution: 2dppx) and (min-width:1158px) {
 
 @media screen and (min-width:768px) and (max-width:1157px) {
   .footer-container {
+    display: flex;
     flex-wrap: wrap;
     width: 768px;
     row-gap: 72px;
     padding-left: 108px;
+    padding-top: 96px;
+    padding-bottom: 96px;
+  }
+}
+
+@media screen and (min-width:1158px) {
+  .footer-container {
+    display: flex;
+    align-items: baseline;
+    width: 1158px;
+    padding-top: 100px;
+    padding-bottom: 100px;
   }
 }
 
